exports[`valid-test-tags > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \"unit\"}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: "unit"}, () => {});

`;

exports[`valid-test-tags > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \"unit\"}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: "unit"}, () => {});
    |                      ^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", -1, -1n]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", -1, -1n]}, () => {});

`;

exports[`valid-test-tags > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", -1, -1n]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", -1, -1n]}, () => {});
    |                               ^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", -1, -1n]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", -1, -1n]}, () => {});
    |                                   ^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [function () {}, class {}]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [function () {}, class {}]}, () => {});

`;

exports[`valid-test-tags > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [function () {}, class {}]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [function () {}, class {}]}, () => {});
    |                       ^^^^^^^^^^^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [function () {}, class {}]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [function () {}, class {}]}, () => {});
    |                                       ^^^^^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", , \"slow\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", , "slow"]}, () => {});

`;

exports[`valid-test-tags > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", , \"slow\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", , "slow"]}, () => {});
    |                      ^^^^^^^^^^^^^^^^^^ \`tags\` must not contain empty slots.

`;

exports[`valid-test-tags > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [""]}, () => {});

`;

exports[`valid-test-tags > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [""]}, () => {});
    |                       ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`\`]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [\`\`]}, () => {});

`;

exports[`valid-test-tags > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`\`]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [\`\`]}, () => {});
    |                       ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(15): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT"]}, () => {});

`;

exports[`valid-test-tags > invalid(15): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT"]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test.expectFailure("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test.expectFailure("title", {tags: ["UPPER"]}, () => {});
    |                                     ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test.expectFailure("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(17): import {test, it, describe, suite, before} from 'node:test';\ntest.only(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test.only("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(17): import {test, it, describe, suite, before} from 'node:test';\ntest.only(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test.only("title", {tags: ["UPPER"]}, () => {});
    |                            ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test.only("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(18): import {test, it, describe, suite, before} from 'node:test';\ndescribe.skip(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.skip("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(18): import {test, it, describe, suite, before} from 'node:test';\ndescribe.skip(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe.skip("title", {tags: ["UPPER"]}, () => {});
    |                                ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.skip("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ndescribe.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.expectFailure("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ndescribe.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe.expectFailure("title", {tags: ["UPPER"]}, () => {});
    |                                         ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.expectFailure("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \`unit\`}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: \`unit\`}, () => {});

`;

exports[`valid-test-tags > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \`unit\`}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: \`unit\`}, () => {});
    |                      ^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(20): import * as nodeTest from 'node:test';\nnodeTest.test.only(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.only("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(20): import * as nodeTest from 'node:test';\nnodeTest.test.only(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test.only("title", {tags: ["UPPER"]}, () => {});
    |                                     ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.only("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(21): import * as nodeTest from 'node:test';\nnodeTest.test.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.expectFailure("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(21): import * as nodeTest from 'node:test';\nnodeTest.test.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test.expectFailure("title", {tags: ["UPPER"]}, () => {});
    |                                              ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.expectFailure("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.suite.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.suite.expectFailure("title", {tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.suite.expectFailure(\"title\", {tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.suite.expectFailure("title", {tags: ["UPPER"]}, () => {});
    |                                               ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.suite.expectFailure("title", {tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(23): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"], tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(23): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit"], tags: ["UPPER"]}, () => {});
    |                                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"], tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(24): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {...options, tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {...options, tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(24): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {...options, tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {...options, tags: ["UPPER"]}, () => {});
    |                                   ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {...options, tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(25): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {[\"tags\"]: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {["tags"]: ["unit"], tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(25): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {[\"tags\"]: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {["tags"]: ["unit"], tags: ["UPPER"]}, () => {});
    |                                           ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {["tags"]: ["unit"], tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(26): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {\"tags\": [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {"tags": ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(26): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {\"tags\": [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {"tags": ["UPPER"]}, () => {});
    |                         ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {"tags": ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(27): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`SLOW\`]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [\`SLOW\`]}, () => {});

`;

exports[`valid-test-tags > invalid(27): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`SLOW\`]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [\`SLOW\`]}, () => {});
    |                       ^^^^^^ Tag \`SLOW\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['slow']}, () => {});

`;

exports[`valid-test-tags > invalid(28): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"ÜNICODE\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["ÜNICODE"]}, () => {});

`;

exports[`valid-test-tags > invalid(28): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"ÜNICODE\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["ÜNICODE"]}, () => {});
    |                       ^^^^^^^^^ Tag \`ÜNICODE\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["ünicode"]}, () => {});

`;

exports[`valid-test-tags > invalid(29): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [/* tag */ \"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [/* tag */ "UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(29): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [/* tag */ \"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [/* tag */ "UPPER"]}, () => {});
    |                                 ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [/* tag */ "upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: null}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: null}, () => {});

`;

exports[`valid-test-tags > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: null}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: null}, () => {});
    |                      ^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(30): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"unit\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(30): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"unit\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", "unit"]}, () => {});
    |                               ^^^^^^ Duplicate tag \`unit\`.

`;

exports[`valid-test-tags > invalid(31): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(31): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT", "unit"]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(31): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT", "unit"]}, () => {});
    |                               ^^^^^^ Duplicate tag \`unit\`.

`;

exports[`valid-test-tags > invalid(32): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\" as string] as string[]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT" as string] as string[]}, () => {});

`;

exports[`valid-test-tags > invalid(32): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\" as string] as string[]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT" as string] as string[]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit" as string] as string[]}, () => {});

`;

exports[`valid-test-tags > invalid(33): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\" satisfies string]!}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UPPER" satisfies string]!}, () => {});

`;

exports[`valid-test-tags > invalid(33): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\" satisfies string]!}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UPPER" satisfies string]!}, () => {});
    |                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["upper" satisfies string]!}, () => {});

`;

exports[`valid-test-tags > invalid(34): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: <string[]>[\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: <string[]>["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(34): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: <string[]>[\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: <string[]>["UPPER"]}, () => {});
    |                                 ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: <string[]>["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(35): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -(1 as number)}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: -(1 as number)}, () => {});

`;

exports[`valid-test-tags > invalid(35): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -(1 as number)}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: -(1 as number)}, () => {});
    |                      ^^^^^^^^^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(36): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); });

`;

exports[`valid-test-tags > invalid(36): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); });
    |                                                  ^^^^^^ Tag \`Slow\` must use its lowercase canonical form.

Output:
  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('a', {tags: ['slow', 'slow']}, () => {}); });

`;

exports[`valid-test-tags > invalid(36): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); }); 3`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('a', {tags: ['Slow', 'slow']}, () => {}); });
    |                                                          ^^^^^^ Duplicate tag \`slow\`.

`;

exports[`valid-test-tags > invalid(37): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a b']}, () => {});

`;

exports[`valid-test-tags > invalid(37): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a b']}, () => {});
    |                       ^^^^^ Tag \`a b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(38): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\tb']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a\\tb']}, () => {});

`;

exports[`valid-test-tags > invalid(38): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\tb']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a\\tb']}, () => {});
    |                       ^^^^^^ Tag \`a	b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(39): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\nb']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a\\nb']}, () => {});

`;

exports[`valid-test-tags > invalid(39): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\nb']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a\\nb']}, () => {});
    |                       ^^^^^^ Tag \`a
b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: {}}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: {}}, () => {});

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: {}}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: {}}, () => {});
    |                      ^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(40): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\vb']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a\\vb']}, () => {});

`;

exports[`valid-test-tags > invalid(40): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\vb']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a\\vb']}, () => {});
    |                       ^^^^^^ Tag \`ab\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(41): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\fb']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a\\fb']}, () => {});

`;

exports[`valid-test-tags > invalid(41): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a\\fb']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a\\fb']}, () => {});
    |                       ^^^^^^ Tag \`ab\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(42): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [' a']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [' a']}, () => {});

`;

exports[`valid-test-tags > invalid(42): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [' a']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [' a']}, () => {});
    |                       ^^^^ Tag \` a\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(43): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a&b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a&b']}, () => {});

`;

exports[`valid-test-tags > invalid(43): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a&b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a&b']}, () => {});
    |                       ^^^^^ Tag \`a&b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(44): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a|b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a|b']}, () => {});

`;

exports[`valid-test-tags > invalid(44): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a|b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a|b']}, () => {});
    |                       ^^^^^ Tag \`a|b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(45): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a!b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a!b']}, () => {});

`;

exports[`valid-test-tags > invalid(45): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a!b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a!b']}, () => {});
    |                       ^^^^^ Tag \`a!b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(46): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a(b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a(b']}, () => {});

`;

exports[`valid-test-tags > invalid(46): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a(b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a(b']}, () => {});
    |                       ^^^^^ Tag \`a(b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(47): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a)b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a)b']}, () => {});

`;

exports[`valid-test-tags > invalid(47): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a)b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a)b']}, () => {});
    |                       ^^^^^ Tag \`a)b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(48): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a*b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['a*b']}, () => {});

`;

exports[`valid-test-tags > invalid(48): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['a*b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['a*b']}, () => {});
    |                       ^^^^^ Tag \`a*b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(49): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"title\", {tags: ['a b']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("title", {tags: ['a b']}, () => {});

`;

exports[`valid-test-tags > invalid(49): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"title\", {tags: ['a b']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe("title", {tags: ['a b']}, () => {});
    |                           ^^^^^ Tag \`a b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -1}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: -1}, () => {});

`;

exports[`valid-test-tags > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -1}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: -1}, () => {});
    |                      ^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(50): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', {tags: ['a b']}, () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('a', {tags: ['a b']}, () => {}); });

`;

exports[`valid-test-tags > invalid(50): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', {tags: ['a b']}, () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('a', {tags: ['a b']}, () => {}); });
    |                                                  ^^^^^ Tag \`a b\` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(51): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"slow\", \" \"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", "slow", " "]}, () => {});

`;

exports[`valid-test-tags > invalid(51): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"slow\", \" \"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", "slow", " "]}, () => {});
    |                                       ^^^ Tag \` \` must not contain whitespace or any of \`&\`, \`|\`, \`!\`, \`(\`, \`)\`, \`*\`.

`;

exports[`valid-test-tags > invalid(52): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['and']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['and']}, () => {});

`;

exports[`valid-test-tags > invalid(52): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['and']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['and']}, () => {});
    |                       ^^^^^ Tag \`and\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(53): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['or']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['or']}, () => {});

`;

exports[`valid-test-tags > invalid(53): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['or']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['or']}, () => {});
    |                       ^^^^ Tag \`or\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(54): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['not']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['not']}, () => {});

`;

exports[`valid-test-tags > invalid(54): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['not']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['not']}, () => {});
    |                       ^^^^^ Tag \`not\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(55): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['AND']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['AND']}, () => {});

`;

exports[`valid-test-tags > invalid(55): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['AND']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['AND']}, () => {});
    |                       ^^^^^ Tag \`AND\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(56): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['OR']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['OR']}, () => {});

`;

exports[`valid-test-tags > invalid(56): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['OR']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['OR']}, () => {});
    |                       ^^^^ Tag \`OR\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(57): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['Not']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['Not']}, () => {});

`;

exports[`valid-test-tags > invalid(57): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['Not']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['Not']}, () => {});
    |                       ^^^^^ Tag \`Not\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(58): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['not', 'not']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['not', 'not']}, () => {});

`;

exports[`valid-test-tags > invalid(58): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['not', 'not']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['not', 'not']}, () => {});
    |                       ^^^^^ Tag \`not\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(58): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['not', 'not']}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['not', 'not']}, () => {});
    |                              ^^^^^ Tag \`not\` must not be the reserved word \`and\`, \`or\`, or \`not\`.

`;

exports[`valid-test-tags > invalid(59): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\", \"\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["", ""]}, () => {});

`;

exports[`valid-test-tags > invalid(59): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\", \"\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["", ""]}, () => {});
    |                       ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(59): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\", \"\"]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["", ""]}, () => {});
    |                           ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: +1}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: +1}, () => {});

`;

exports[`valid-test-tags > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: +1}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: +1}, () => {});
    |                      ^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(60): import {test, it, describe, suite, before} from 'node:test';\ntest({name: \"title\", tags: [\"UPPER\"], fn() {}}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test({name: "title", tags: ["UPPER"], fn() {}});

`;

exports[`valid-test-tags > invalid(60): import {test, it, describe, suite, before} from 'node:test';\ntest({name: \"title\", tags: [\"UPPER\"], fn() {}}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test({name: "title", tags: ["UPPER"], fn() {}});
    |                             ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test({name: "title", tags: ["upper"], fn() {}});

`;

exports[`valid-test-tags > invalid(61): import {test, it, describe, suite, before} from 'node:test';\nit({name: \"title\", tags: [\"UPPER\"], fn() {}}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it({name: "title", tags: ["UPPER"], fn() {}});

`;

exports[`valid-test-tags > invalid(61): import {test, it, describe, suite, before} from 'node:test';\nit({name: \"title\", tags: [\"UPPER\"], fn() {}}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | it({name: "title", tags: ["UPPER"], fn() {}});
    |                           ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it({name: "title", tags: ["upper"], fn() {}});

`;

exports[`valid-test-tags > invalid(62): import {test, it, describe, suite, before} from 'node:test';\nsuite({name: \"title\", tags: [\"UPPER\"], fn() {}}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite({name: "title", tags: ["UPPER"], fn() {}});

`;

exports[`valid-test-tags > invalid(62): import {test, it, describe, suite, before} from 'node:test';\nsuite({name: \"title\", tags: [\"UPPER\"], fn() {}}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | suite({name: "title", tags: ["UPPER"], fn() {}});
    |                              ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite({name: "title", tags: ["upper"], fn() {}});

`;

exports[`valid-test-tags > invalid(63): import {test, it, describe, suite, before} from 'node:test';\ntest({name: \"title\", tags: \"UPPER\"}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test({name: "title", tags: "UPPER"});

`;

exports[`valid-test-tags > invalid(63): import {test, it, describe, suite, before} from 'node:test';\ntest({name: \"title\", tags: \"UPPER\"}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test({name: "title", tags: "UPPER"});
    |                            ^^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(64): import {test} from 'node:test';\ntest('p', t => { t.test({name: 'a', tags: ['UPPER']}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { t.test({name: 'a', tags: ['UPPER']}); });

`;

exports[`valid-test-tags > invalid(64): import {test} from 'node:test';\ntest('p', t => { t.test({name: 'a', tags: ['UPPER']}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { t.test({name: 'a', tags: ['UPPER']}); });
    |                                            ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test} from 'node:test';
  2 | test('p', t => { t.test({name: 'a', tags: ['upper']}); });

`;

exports[`valid-test-tags > invalid(65): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [...base, \"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [...base, "UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(65): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [...base, \"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [...base, "UPPER"]}, () => {});
    |                                ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [...base, "upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(66): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", ...base, \"UNIT\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", ...base, "UNIT"]}, () => {});

`;

exports[`valid-test-tags > invalid(66): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", ...base, \"UNIT\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", ...base, "UNIT"]}, () => {});
    |                                        ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", ...base, "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(66): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", ...base, \"UNIT\"]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", ...base, "UNIT"]}, () => {});
    |                                        ^^^^^^ Duplicate tag \`unit\`.

`;

exports[`valid-test-tags > invalid(67): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['UPPER']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['UPPER']}, () => {});

`;

exports[`valid-test-tags > invalid(67): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['UPPER']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['UPPER']}, () => {});
    |                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['upper']}, () => {});

`;

exports[`valid-test-tags > invalid(68): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['UP\\'PER']}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['UP\\'PER']}, () => {});

`;

exports[`valid-test-tags > invalid(68): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: ['UP\\'PER']}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ['UP\\'PER']}, () => {});
    |                       ^^^^^^^^^ Tag \`UP'PER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['up\\'per']}, () => {});

`;

exports[`valid-test-tags > invalid(69): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [[\"unit\"]]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [["unit"]]}, () => {});

`;

exports[`valid-test-tags > invalid(69): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [[\"unit\"]]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [["unit"]]}, () => {});
    |                       ^^^^^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -1n}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: -1n}, () => {});

`;

exports[`valid-test-tags > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: -1n}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: -1n}, () => {});
    |                      ^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(70): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\"], [\"timeout\"]: 5}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UPPER"], ["timeout"]: 5}, () => {});

`;

exports[`valid-test-tags > invalid(70): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\"], [\"timeout\"]: 5}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UPPER"], ["timeout"]: 5}, () => {});
    |                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["upper"], ["timeout"]: 5}, () => {});

`;

exports[`valid-test-tags > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: () => {}}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: () => {}}, () => {});

`;

exports[`valid-test-tags > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: () => {}}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: () => {}}, () => {});
    |                      ^^^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                               ^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                  ^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 4`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                        ^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 5`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                            ^^^^ Tag values must be strings.

`;
